tests off by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 project(socket)
 
-option(RUN_TESTS "Run unit tests" ON)
+option(SOCKET_TESTS "Run unit tests" OFF)
 
-if(RUN_TESTS)
+if(SOCKET_TESTS)
   add_subdirectory(test)
 endif()
 
