don't run lock_tests by default

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,4 +11,4 @@ add_executable(${PROJECT_NAME} test-runner.cpp ${TESTS})
 target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARY} rt)
 target_include_directories(${PROJECT_NAME} PRIVATE ../include)
 
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${PROJECT_NAME})
+#add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${PROJECT_NAME})
