add lock lib and make header library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,13 @@ cmake_minimum_required(VERSION 3.5)
 project(socket)
 
 option(SOCKET_TESTS "Run unit tests" OFF)
-
 if(SOCKET_TESTS)
   add_subdirectory(test)
 endif()
+
+add_subdirectory(lock)
+
+add_library(${PROJECT_NAME} INTERFACE)
+target_include_directories(${PROJECT_NAME} INTERFACE include)
+target_link_libraries(${PROJECT_NAME} INTERFACE lock)
 
