--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,7 @@ add_compile_options(-std=c++17 -pedantic -Wall)
 
 file(GLOB TESTS tests/*.cpp)
 add_executable(${PROJECT_NAME} test-runner.cpp ${TESTS})
-target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARY} rt)
-target_include_directories(${PROJECT_NAME} PRIVATE ../include)
+target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARY} rt socket)
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${PROJECT_NAME})
+
