guard lock include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ if(SOCKET_TESTS)
   add_subdirectory(test)
 endif()
 
-add_subdirectory(lock)
+if(NOT TARGET lock)
+  add_subdirectory(lock)
+endif()
 
 add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE include)
