--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,10 @@ endif()
 if(NOT TARGET lock)
   add_subdirectory(lock)
 endif()
+if(NOT TARGET file-descriptor)
+  add_subdirectory(file-descriptor)
+endif()
 
 add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE include)
-target_link_libraries(${PROJECT_NAME} INTERFACE lock)
+target_link_libraries(${PROJECT_NAME} INTERFACE lock file-descriptor)
